--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@tanstack/react-query": "^5.40.1",
-    "antd": "^5.18.0",
+    "antd": "^5.18.1",
+    "babel-plugin-import": "^1.13.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
