--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@ant-design/icons": "^5.3.7",
     "@tanstack/react-query": "^5.40.1",
     "antd": "^5.18.1",
-    "babel-plugin-import": "^1.13.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
@@ -25,6 +24,7 @@
     "@typescript-eslint/parser": "^7.12.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "babel-plugin-import": "^1.13.8",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -34,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
