--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
+    "@ant-design/pro-layout": "^7.19.8",
     "@tanstack/react-query": "^5.40.1",
     "antd": "^5.18.1",
     "react": "^18.2.0",
