--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "pre-commit": "npm run build"
+    "pre-commit": "npm run build",
+    "prepare": "husky"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@ant-design/pro-layout": "^7.19.8",
     "@tanstack/react-query": "^5.40.1",
     "antd": "^5.18.1",
-    "husky": "^9.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "husky": "^9.0.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
