--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
-    "husky": "^9.0.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
@@ -36,11 +35,13 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "husky": "^9.0.11",
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
