--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "antd": "^5.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "reactjs-social-login": "^2.6.3"
   },
   "devDependencies": {
+    "@types/node": "^20.14.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
