--- a/customHttp.yml
+++ b/customHttp.yml
@@ -14,4 +14,4 @@ customHeaders:
       - key: 'Strict-Transport-Security'
         value: 'max-age=31536000; includeSubDomains'
       - key: 'Content-Security-Policy'
-        value: 'default-src self'
+        value: "default-src 'self'; img-src 'self' https://main.d1pmpdg6h6u04i.amplifyapp.com;"
