--- a/customHttp.yml
+++ b/customHttp.yml
@@ -13,5 +13,5 @@ customHeaders:
         value: '1; mode=block'
       - key: 'Strict-Transport-Security'
         value: 'max-age=31536000; includeSubDomains'
-      # - key: 'Content-Security-Policy'
-      #   value: "default-src 'self'; img-src 'self' https://main.d1pmpdg6h6u04i.amplifyapp.com;"
+      - key: 'Content-Security-Policy'
+        value: "default-src 'self'; img-src 'self' 'unsafe-inline' https://main.d1pmpdg6h6u04i.amplifyapp.com;"
