--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-mock-dev-server": "^1.5.1",
     "vite-plugin-pwa": "^0.20.0"
   }
 }
