--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.23.1",
     "reactjs-social-login": "^2.6.3"
   },
@@ -25,6 +26,7 @@
     "@types/node": "^20.14.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-highlight-words": "^0.20.0",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "@vitejs/plugin-react": "^4.2.1",
